--- a/branches/index.html
+++ b/branches/index.html
@@ -6,7 +6,7 @@
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
   <!-- <script language="javascript" type="text/javascript" src="js/blindfish.js" ></script> -->
-  <script language="javascript" type="text/javascript" src="js/branch.js" ></script>
+  <script language="javascript" type="text/javascript" src="js/tree.js" ></script>
   <script language="javascript" type="text/javascript" src="js/sketch.js" ></script>
 
 </head>
