--- a/branches/index.html
+++ b/branches/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" media="screen" href="css/styles.css" />
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-  <!-- <script language="javascript" type="text/javascript" src="js/blindfish.js" ></script> -->
+   <script language="javascript" type="text/javascript" src="js/blindfish.js" ></script>
+   <script language="javascript" type="text/javascript" src="../_lib/VariableManager.js" ></script>
+    
   <script language="javascript" type="text/javascript" src="js/tree.js" ></script>
   <script language="javascript" type="text/javascript" src="js/sketch.js" ></script>
 
