more controls added

--- a/branches/index.html
+++ b/branches/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Title</title>
     
-    <link rel="stylesheet" media="screen" href="css/styles.css" />
+    <link rel="stylesheet" media="screen" href="../_lib/main.css" />
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
    <script language="javascript" type="text/javascript" src="js/blindfish.js" ></script>
