--- a/branches/index.html
+++ b/branches/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" media="screen" href="../_lib/main.css" />
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-   <script language="javascript" type="text/javascript" src="js/blindfish.js" ></script>
-   <script language="javascript" type="text/javascript" src="../_lib/VariableManager.js" ></script>
+   <script src="js/blindfish.js" ></script>
+   <script src="../_lib/VariableManager.js" ></script>
     
-  <script language="javascript" type="text/javascript" src="js/tree.js" ></script>
-  <script language="javascript" type="text/javascript" src="js/sketch.js" ></script>
+  <script  src="js/tree.js" ></script>
+  <script  src="js/sketch.js" ></script>
 
 </head>
 
