--- a/sprites01/index.html
+++ b/sprites01/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>sprites01</title>
 
     <link rel="stylesheet" media="screen" href="css/styles.css" />
 
@@ -9,9 +9,11 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.dom.js"></script>  -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.sound.js"></script> -->
 
-    <script src="js/blindfish.js"></script>
+    <script src="../lib/blindfish.js"></script>
     <script src="js/sketch.js"></script>
 
+    <script src="../lib/body.js"></script>
+<script src="js/particle.js"></script>
 
     <style>
     </style>
