--- a/exploding-image/index.html
+++ b/exploding-image/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>Exploding elephant - p5js</title>
 
     <link rel="stylesheet" media="screen" href="css/styles.css" />
     <link rel="stylesheet" media="screen" href="../lib/main.css" />
@@ -12,7 +12,7 @@
 
     <script src="../lib/blindfish.js"></script>
     <script src="js/sketch.js"></script>
-    <script src="../lib/body.js"></script>
+
     <script src="js/particle.js"></script>
 
 
