added more bufi demo pages

--- a/lib/bufi-demo.html
+++ b/lib/bufi-demo.html
@@ -3,9 +3,21 @@
   <head>
     <meta name="viewport" content="initial-scale=1">
     <title>BUFI demo</title>
-    <link href="main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="bufi.css" rel="stylesheet">
+    <style>
+        body {
+            padding: 1.5em;
+            margin: 0;
+            background: #666;
+            font-family: : Verdana;
+        }
+
+        h2, h3, h4 {
+            margin-bottom: 0.15em;
+            color: #fff;
+        }
+    </style>
   </head>
   <body>
     <header>
@@ -15,11 +27,6 @@
       <div id="sketch01"></div>
       <div id="control01"></div>
     </main>
-    <footer class="page-footer green">
-      <div class="container">
-        <p></p>
-      </div>
-    </footer>
     <script src="bufi.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.22/p5.js"></script>
     <script src="bufi_sketch.js"></script>
