added improved bufi demo pages

--- a/branches/index.html
+++ b/branches/index.html
@@ -4,7 +4,7 @@
 
     <link rel="stylesheet" media="screen" href="../lib/main.css" />
     <link rel="stylesheet" media="screen" href="css/styles.css" />
-    <link rel="stylesheet" media="screen" href="../lib/bufi.css" />
+    <link rel="stylesheet" media="screen" href="../lib/bufi_m.min.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
    <script src="js/blindfish.js" ></script>
@@ -23,7 +23,7 @@
     </div>
 
 
-    <script  src="../lib/bufi.js" ></script>
+    <script  src="../lib/bufi.min.js" ></script>
     <script  src="js/tree.js" ></script>
     <script  src="js/sketch.js" ></script>
 </body>
