--- a/circles01/index.html
+++ b/circles01/index.html
@@ -3,16 +3,13 @@
 <head>
     <title>Shapes 01</title>
 
-    <link rel="stylesheet" media="screen" href="css/styles.css" />
-    <link rel="stylesheet" media="screen" href="../lib/main.css" />
-
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../lib/bufi_m.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.dom.js"></script>  -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.sound.js"></script> -->
+
 
     <script src="../lib/blindfish.js"></script>
-    <script src="../lib/VariableManager.js" ></script>
-    <script src="js/sketch.js"></script>
+    
     <script src="js/circle.js"></script>
 
 
@@ -24,6 +21,10 @@
     <div id="sketch01"> </div>
     <div id="controls"> </div>
     <div id="colourControls"> </div>
+    
+    <script  src="../lib/bufi.min.js" ></script>
+    <script src="js/sketch.js"></script>
+
 </body>
 
 </html>
