--- a/src/balls-multiple/index.html
+++ b/src/balls-multiple/index.html
@@ -9,13 +9,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
 
-    <script src="js/blindfish.js"></script>
-    <script src="js/Mover.js"></script>
-    <script src="js/moveObjects.js"></script>
-    <script src="js/checkCollision.js"></script>
-    <script src="js/applyGravity.js"></script>
-    <script src="js/Ball.js"></script>
-    <script src="js/sketch.js"></script>
+    <script type="module" src="js/sketch.js"></script>
 
 </head>
 
@@ -30,7 +24,7 @@
     </div>
 
     <script  src="../lib/bufi.min.js" ></script>
-    <script  src="js/controls.js" ></script>
+    <script type="module" src="js/controls.js" ></script>
 
 
 </body>
