updates multiple sketches

--- a/src/balls03/index.html
+++ b/src/balls03/index.html
@@ -1,20 +1,13 @@
 <html>
 
 <head>
-    <title>Balls 03</title>
+  <title>Balls 03</title>
 
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="../lib/bufi_m.min.css" />
+  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="../lib/bufi_m.min.css" />
 
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-    
-    <script src="js/blindfish.js"></script>
-    <script src="js/sketch.js"></script>
-    <script src="js/Mover.js"></script>
-    <script src="js/moveObjects.js"></script>
-    <script src="js/checkCollision.js"></script>
-    <script src="js/applyGravity.js"></script>
-    <script src="js/Ball.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
+  <script type="module" src="js/sketch.js"></script>
 
 </head>
 
@@ -23,7 +16,7 @@
     <div id="controls"> </div>
 
     <script src="../lib/bufi.min.js" ></script>
-    <script src="js/controls.js"></script>
+    <script type="module" src="js/controls.js"></script>
 </body>
 
 </html>
