--- a/src/branches/index.html
+++ b/src/branches/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" media="screen" href="../lib/bufi_m.min.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-   <script src="js/blindfish.js" ></script>
 
 </head>
 
@@ -19,7 +18,7 @@
 
 
     <script  src="../lib/bufi.min.js" ></script>
-    <script  src="js/tree.js" ></script>
-    <script  src="js/sketch.js" ></script>
+
+    <script type="module" src="js/sketch.js" ></script>
 </body>
 </html>
