--- a/src/circles01/index.html
+++ b/src/circles01/index.html
@@ -8,10 +8,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
 
 
-    <script src="../lib/blindfish.js"></script>
-    
-    <script src="js/circle.js"></script>
-
 
     <style>
     </style>
@@ -21,9 +17,9 @@
     <div id="sketch01"> </div>
     <div id="controls"> </div>
     <div id="colourControls"> </div>
-    
+
     <script  src="../lib/bufi.min.js" ></script>
-    <script src="js/sketch.js"></script>
+    <script type="module" src="js/sketch.js"></script>
 
 </body>
 
