updates more sketches this is a bad commit msg :/

--- a/src/circle-triangle-01/index.html
+++ b/src/circle-triangle-01/index.html
@@ -6,12 +6,9 @@
     <link rel="stylesheet" media="screen" href="css/styles.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"> </script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.dom.js"></script>  -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.sound.js"></script> -->
 
-    <script src="js/blindfish.js"> </script>
-    <script src="js/sketch.js"> </script>
-    <script src="js/circle-triangle.js"></script>
+
+    <script type="module" src="js/sketch.js"> </script>
 
 
 </head>
