--- a/src/exploding-image/index.html
+++ b/src/exploding-image/index.html
@@ -7,14 +7,8 @@
     <link rel="stylesheet" media="screen" href="../lib/main.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.dom.js"></script>  -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.sound.js"></script> -->
 
-    <script src="../lib/blindfish.js"></script>
-    <script src="js/sketch.js"></script>
-
-    <script src="js/particle.js"></script>
-
+    <script type="module" src="js/sketch.js"></script>
 
     <style>
     </style>
