--- a/src/sprites01/index.html
+++ b/src/sprites01/index.html
@@ -6,14 +6,10 @@
     <link rel="stylesheet" media="screen" href="css/styles.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.dom.js"></script>  -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/addons/p5.sound.js"></script> -->
 
-    <script src="../lib/blindfish.js"></script>
-    <script src="js/sketch.js"></script>
 
-    <script src="../lib/body.js"></script>
-<script src="js/particle.js"></script>
+    <script type="module" src="js/sketch.js"></script>
+
 
     <style>
     </style>
