updates index files to import sketch modules

--- a/src/balls-multiple-03/index.html
+++ b/src/balls-multiple-03/index.html
@@ -7,13 +7,11 @@
 
     <link rel="stylesheet" href="../lib/bufi_m.min.css" />
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-
-    <!-- <script src="js/blindfish.js"></script>
-    <script src="js/Mover.js"></script>
-    <script src="js/moveObjects.js"></script>
-    <script src="js/checkCollision.js"></script>
-    <script src="js/applyGravity.js"></script>
-    <script src="js/Ball.js"></script> -->
+    <script src="../lib/bufi.min.js" ></script>
+   <script type="module">
+     import { init } from "./js/sketch.js";
+     init();
+   </script>
 
 
 
@@ -27,9 +25,6 @@
         <div id="sketch03"> </div>
         <div id="sketch04"> </div>
     </div>
-
-    <script src="../lib/bufi.min.js" ></script>
-    <script type="module" src="js/sketch.js"></script>
 </body>
 
 </html>
