--- a/src/balls03/index.html
+++ b/src/balls03/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="../lib/bufi_m.min.css" />
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-  <script type="module" src="js/sketch.js"></script>
+  <script type="module">
+    import { init } from "./js/sketch.js";
+    init();
+  </script>
 
 </head>
 
