--- a/src/circles01/index.html
+++ b/src/circles01/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="../lib/bufi_m.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
 
-
+    <script  src="../lib/bufi.min.js" ></script>
+    <script type="module">
+      import { init } from "./js/sketch.js";
+      init();
+    </script>
 
     <style>
     </style>
@@ -17,10 +21,6 @@
     <div id="sketch01"> </div>
     <div id="controls"> </div>
     <div id="colourControls"> </div>
-
-    <script  src="../lib/bufi.min.js" ></script>
-    <script type="module" src="js/sketch.js"></script>
-
 </body>
 
 </html>
