--- a/src/IK01/index.html
+++ b/src/IK01/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" media="screen" href="css/styles.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
-    <script type="module" src="js/sketch.js"></script>
+    <script type="module">
+      import { init } from "./js/sketch.js";
+      init();
+    </script>
 
   <style>
 
