--- a/src/branches/index.html
+++ b/src/branches/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" media="screen" href="../lib/bufi_m.min.css" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
+    <script  src="../lib/bufi.min.js" ></script>
+    <script type="module">
+      import { init } from "./js/sketch.js";
+      init();
+    </script>
 
 </head>
 
@@ -15,10 +20,5 @@
         <div id="sketch01"> </div>
         <div id="controls"> </div>
     </div>
-
-
-    <script  src="../lib/bufi.min.js" ></script>
-
-    <script type="module" src="js/sketch.js" ></script>
 </body>
 </html>
