--- a/src/circle-triangle-01/index.html
+++ b/src/circle-triangle-01/index.html
@@ -7,8 +7,10 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"> </script>
 
-
-    <script type="module" src="js/sketch.js"> </script>
+    <script type="module">
+      import { init } from "./js/sketch.js";
+      init();
+    </script>
 
 
 </head>
