--- a/src/springs01/index.html
+++ b/src/springs01/index.html
@@ -6,11 +6,10 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
 
-  <!-- <script language="javascript" type="text/javascript" src="js/blindfish.js" ></script>
-    <script language="javascript" type="text/javascript" src="js/variablesManager.js"></script>
-     <script language="javascript" type="text/javascript" src="js/Mover.js" ></script>
-     <script language="javascript" type="text/javascript" src="js/ball.js" ></script> -->
-  <script type="module" src="js/sketch.js" ></script>
+  <script type="module">
+    import { init } from "./js/sketch.js";
+    init();
+  </script>
 
   <style>
 
