--- a/src/sprites01/index.html
+++ b/src/sprites01/index.html
@@ -8,7 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.5/p5.js"></script>
 
 
-    <script type="module" src="js/sketch.js"></script>
+    <script type="module">
+      import { init } from "./js/sketch.js";
+      init();
+    </script>
 
 
     <style>
